--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.2",
+    "connect-redis": "^3.3.3",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
+    "redis": "^2.8.0",
+    "socket.io": "^2.1.0",
+    "socket.io.session": "^1.0.13"
   }
 }
