--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express-handlebars": "^3.0.0",
         "express-session": "^1.15.6",
         "knex": "^0.14.6",
+        "nanoid": "^1.0.2",
         "passport": "^0.4.0",
         "passport-facebook": "^2.1.1",
         "passport-local": "^1.0.0",
